[project]
name = "currency-conversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.21.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
]

[project.scripts]
fetch-exchange-rate = "currency_conversion.__main__:app"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.uv]
package = true
